--- a/ansible/tasks/install_docker.yml
+++ b/ansible/tasks/install_docker.yml
@@ -1,3 +1,4 @@
+---
 - name: Update apt and install system packages
   apt:
     pkg:
@@ -5,8 +6,8 @@
       - ca-certificates
       - curl
       - software-properties-common
-      - python3-pip
       - git
+      - python3-full
     state: present
     update_cache: yes
 
@@ -25,6 +26,7 @@
     name: docker-ce
     state: present
 
-- name: Ensure Docker Python library is present
-  pip:
-    name: docker
+- name: Ensure Docker Python library is present via apt
+  apt:
+    name: python3-docker
+    state: present
